# ft_linearRegression

./: estimate.py  linear.py  main.py  output.csv  pyproject.toml  theta.csv
